[package]
name = "testnet4-reorg-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"